Implement /photoStationsByCountry/{country} endpoint